--- a/res/layout/leaguenight.xml
+++ b/res/layout/leaguenight.xml
@@ -42,7 +42,8 @@
         android:id="@+id/etGame1"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:inputType="number" />
+        android:inputType="number" 
+        android:text="0"/>
     
 
     <Button
