Fixed LeagueNightctivity, and the ListLeagueNight xml

--- a/res/layout/leaguenightgame.xml
+++ b/res/layout/leaguenightgame.xml
@@ -21,8 +21,9 @@
       android:id="@+id/et" 
       android:layout_width="100dp" 
       android:layout_height="wrap_content" 
-      android:inputType="number" />
-
+      android:inputType="number" 
+      android:text="0"/>
+     
      <Button
       android:id="@+id/btn"
       android:layout_width="wrap_content" 
